--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
 			<p>TEXTTEXTTEXTT EXTTEXTTEXTTEXTTEXTTE XTTEXTTEXTTEXTTEXTTEXTTEXT TEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTE XTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXT TEXTTEXTTEXTTEXTTEXT
 			</p>
 		</div>
-		<div id="right"></div>
+		<div id="right"><p>Hello</p></div>
 		<div id="footer"></div>
 	</body>
