--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 			<p>TEXTTEXTTEXTT EXTTEXTTEXTTEXTTEXTTE XTTEXTTEXTTEXTTEXTTEXTTEXT TEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTE XTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXT TEXTTEXTTEXTTEXTTEXT
 			</p>
 		</div>
-		<div id="right"><p>Hello</p></div>
+		<div id="right"><h1>Life and Times</h1>
+			<p>Hello my name is Ashleigh</p></div>
 		<div id="footer"></div>
 	</body>
 	</html>
