--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <!DOCTYPE html>
 
-<h1>Hello</h1>
+<html>
+
+	<head>
+		<title>Science Magazine</title>
+	</head>
+
+	<body>
+
+		<div class='jumbotron'>
+			<div class='container'>
+				<h1>Science Magazine</h1>
+			</div>
+		</div>
+
+	</body>
+
+</html>
