--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 	<head>
 		<title>Science Magazine</title>
+		<link href='dist/css/bootstrap.css' rel='stylesheet'>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<body>
