--- a/index.html
+++ b/index.html
@@ -10,11 +10,83 @@
 
 	<body>
 
+		<nav class="navbar navbar-default" role="navigation">
+  			<div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    			<div class="navbar-header">
+      				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        				<span class="sr-only">Toggle navigation</span>
+					    <span class="icon-bar"></span>
+					    <span class="icon-bar"></span>
+					    <span class="icon-bar"></span>
+      				</button>
+      				<a class="navbar-brand" href="#">Brand</a>
+    			</div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link</a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search an article">
+        </div>
+        <button type="submit" class="btn btn-default">Go</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 		<div class='jumbotron'>
 			<div class='container'>
-				<h1>Science Magazine</h1>
+				<div class='row'>
+					<div class='col-sm-8'>
+						<h1>Science Magazine</h1>
+					</div>
+					<div class='col-sm-4'>
+						<img src="http://t0.gstatic.com/images?q=tbn:ANd9GcQlRKkebViE6bsozK6UHKMJT0hV6A1NuAfL2UwyTdpFSwRfb9iw">
+					</div>
+				</div>
 			</div>
-		</div>
+		</div>	
+			<div class='container'>
+				<div class='row'>
+					<div class='col-sm-2'>
+						<p>Side Bar</p>
+					</div>
+					<div class='col-sm-10'>
+						<p>Main Text</p>
+					</div>
+				</div>
+			</div>		
+	
 
 	</body>
 
