Styling changes and main page completion

--- a/index.html
+++ b/index.html
@@ -59,9 +59,21 @@
 			<div class='container'>
 				<div class='row'>
 					<div class='col-sm-12'>
-						<nav class="navbar navbar-default" role='navigation'>
+						<nav class="navbar navbar-default" role='navigation' id='navbartwo'>
 							<div class='container-fluid'>
-								<a href='#'>link</a>
+								<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      					<ul class="nav navbar-nav">
+								        <li><a href="#">Opinion</a></li>
+								        <li><a href="#">Report</a></li>
+								        <li><a href="#">Society</a></li>
+								        <li><a href="#">Chemistry</a></li>
+								        <li><a href="#">Physics</a></li>
+								        <li><a href="#">Biology</a></li>
+								        <li><a href="#">Maths</a></li>
+								        <li><a href="#">Psychology</a></li>
+								        <li><a href="#">Economics</a></li>
+								    </ul>
+	  							</div>
 							</div>	
 						</nav>
 					</div>
@@ -69,8 +81,18 @@
 
 				<div class='row'>
 					<div class='col-sm-9'>
-						<p>Main Text</p>
-						<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>hi
+						<div class='row'>
+							<div class='col-sm-7'>
+								<h2>Read of the day</h2>
+								<h3>The chemistry of the Northern Lights</h3>
+								<small>by Sophia King</small><br>
+							</div>
+							<div class='col-sm-2'>	
+								<img src="http://t3.gstatic.com/images?q=tbn:ANd9GcQL4R3bVfxv7ROHuMHci25u39oKZSlMXbDMSgix43nq8fTaT-ZTCA" class='img-rounded image'>
+							</div>
+						</div>
+						<br>
+						The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here. The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.
 					</div>
 					<div class='col-sm-3'>
 						<h2>Featured articles</h2>
