--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@
 					    <span class="icon-bar"></span>
 					    <span class="icon-bar"></span>
       				</button>
-      				<a class="navbar-brand" href="#">Brand</a>
+      				<a class="navbar-brand" href="#">SciMag</a>
     			</div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
 	    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			      <ul class="nav navbar-nav">
-			        <li class="active"><a href="#">Link</a></li>
-			        <li><a href="#">Link</a></li>
-			        <li><a href="#">Link</a></li>
+			      <ul class="nav navbar-nav navbar-left">
+			      	<form class='navbar-form navbar-left' role='email'>
+			      		<div class="form-group">
+			      			<input type="email" class='form-control' placeholder='Your email'>
+			      			<input type="password" class='form-control' placeholder='Password'>
+			      		</div>
+			      		<button type='submit' class='btn bth-default'>Log in</button>
+			        </form>
 			      </ul>
-	      
 			      <ul class="nav navbar-nav navbar-right">
 			        <form class="navbar-form navbar-left" role="search">
 			        <div class="form-group">
@@ -51,7 +54,7 @@
 						<h1>Science Magazine</h1>
 					</div>
 					<div class='col-sm-4'>
-						<img src="http://t0.gstatic.com/images?q=tbn:ANd9GcQlRKkebViE6bsozK6UHKMJT0hV6A1NuAfL2UwyTdpFSwRfb9iw">
+						
 					</div>
 				</div>
 			</div>
