--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 		<link href='dist/css/bootstrap.css' rel='stylesheet'>
 		<link href="stylesheet.css" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			  ga('create', 'UA-48682387-1', 'ashleighwaller.com');
+			  ga('send', 'pageview');
+		</script>
 	</head>
 
 	<body>
@@ -83,7 +92,7 @@
 				</div>
 
 				<div class='row'>
-					<div class='col-sm-9'>
+					<div class='col-sm-9' id='main-article'>
 						<div class='row'>
 							<div class='col-sm-7'>
 								<h2>Read of the day</h2>
@@ -96,6 +105,7 @@
 						</div>
 						<br>
 						The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here. The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.
+
 					</div>
 					<div class='col-sm-3'>
 						<h2>Featured articles</h2>
@@ -109,38 +119,39 @@
 							<tbody>
 								<tr>
 									<td>1</td>
-									<td>New particle- Rigg's Fermion -discovered!</td>
+									<td><a  href='#'>New particle- Rigg's Fermion -discovered!</a></td>
 								</tr>
 
 								<tr>
 									<td>2</td>
-									<td>Neutrinos do travel faster than the speed of light!</td>
+									<td><a href='#'>Neutrinos do travel faster than the speed of light!</a></td>
 								</tr>
 
 								<tr>
 									<td>3</td>
-									<td>Chemists synthesize aspirin from tree bark</td>
+									<td><a href="#">Chemists synthesize aspirin from tree bark</a></td>
 								</tr>
 
 								<tr>
 									<td>4</td>
-									<td>Psychologists in Denver develop pathway to recovery for failed businesspeople</td>
+									<td><a href="#">Psychologists in Denver develop pathway to recovery for failed businesspeople</a></td>
 								</tr>
 
 								<tr>
 									<td>5</td>
-									<td>Anti-war campaigners supported by new hormone discovery</td>
+									<td><a href="#">Anti-war campaigners supported by new hormone discovery</a></td>
 								</tr>
 
 								<tr>
 									<td>6</td>
-									<td>A petition to release synthetic data for ministers coffee is successful</td>
+									<td><a href="#">A petition to release synthetic data for ministers coffee is successful</a></td>
 								</tr>
 						</table>		
 					</div>
 				</div>
-			</div>		
-	
+			</div>	
+		
+		
 
 	</body>
 
