--- a/index.html
+++ b/index.html
@@ -1,158 +1,1 @@
-<!DOCTYPE html>
-
-<html>
-
-	<head>
-		<title>Science Magazine</title>
-		<link href='dist/css/bootstrap.css' rel='stylesheet'>
-		<link href="stylesheet.css" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script>
-			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-			  ga('create', 'UA-48682387-1', 'ashleighwaller.com');
-			  ga('send', 'pageview');
-		</script>
-	</head>
-
-	<body>
-
-		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  			<div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    			<div class="navbar-header">
-      				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        				<span class="sr-only">Toggle navigation</span>
-					    <span class="icon-bar"></span>
-					    <span class="icon-bar"></span>
-					    <span class="icon-bar"></span>
-      				</button>
-      				<a class="navbar-brand" href="#">SciMag</a>
-    			</div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-	    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			      <ul class="nav navbar-nav navbar-left">
-			      	<form class='navbar-form navbar-left' role='email'>
-			      		<div class="form-group">
-			      			<input type="email" class='form-control' placeholder='Your email'>
-			      			<input type="password" class='form-control' placeholder='Password'>
-			      		</div>
-			      		<button type='submit' class='btn bth-default'>Log in</button>
-			        </form>
-			      </ul>
-			      <ul class="nav navbar-nav navbar-right">
-			        <form class="navbar-form navbar-left" role="search">
-			        <div class="form-group">
-			          <input type="text" class="form-control" placeholder="Search an article">
-			        </div>
-			        <button type="submit" class="btn btn-default">Go</button>
-			      </form>
-			      </ul>
-	   			</div><!-- /.navbar-collapse -->
- 			</div><!-- /.container-fluid -->
-		</nav>
-
-		<div class='container'>
-			<div class='jumbotron'>
-				<div class='row'>
-					<div class='col-sm-8'>
-						<h1>Science Magazine</h1>
-					</div>
-					<div class='col-sm-4'>
-						
-					</div>
-				</div>
-			</div>
-		</div>	
-			<div class='container'>
-				<div class='row'>
-					<div class='col-sm-12'>
-						<nav class="navbar navbar-default" role='navigation' id='navbartwo'>
-							<div class='container-fluid'>
-								<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			      					<ul class="nav navbar-nav">
-								        <li><a href="#">Opinion</a></li>
-								        <li><a href="#">Report</a></li>
-								        <li><a href="#">Society</a></li>
-								        <li><a href="#">Chemistry</a></li>
-								        <li><a href="#">Physics</a></li>
-								        <li><a href="#">Biology</a></li>
-								        <li><a href="#">Maths</a></li>
-								        <li><a href="#">Psychology</a></li>
-								        <li><a href="#">Economics</a></li>
-								    </ul>
-	  							</div>
-							</div>	
-						</nav>
-					</div>
-				</div>
-
-				<div class='row'>
-					<div class='col-sm-9' id='main-article'>
-						<div class='row'>
-							<div class='col-sm-7'>
-								<h2>Read of the day</h2>
-								<h3>The chemistry of the Northern Lights</h3>
-								<small>by Sophia King</small><br>
-							</div>
-							<div class='col-sm-2'>	
-								<img src="http://t3.gstatic.com/images?q=tbn:ANd9GcQL4R3bVfxv7ROHuMHci25u39oKZSlMXbDMSgix43nq8fTaT-ZTCA" class='img-rounded image'>
-							</div>
-						</div>
-						<br>
-						The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here. The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.The main article text is here.
-
-					</div>
-					<div class='col-sm-3'>
-						<h2>Featured articles</h2>
-						<table class="table">
-							<thead>
-								<th colspan='2'>
-									Read-worthy
-								</th>
-							</thead>
-
-							<tbody>
-								<tr>
-									<td>1</td>
-									<td><a  href='#'>New particle- Rigg's Fermion -discovered!</a></td>
-								</tr>
-
-								<tr>
-									<td>2</td>
-									<td><a href='#'>Neutrinos do travel faster than the speed of light!</a></td>
-								</tr>
-
-								<tr>
-									<td>3</td>
-									<td><a href="#">Chemists synthesize aspirin from tree bark</a></td>
-								</tr>
-
-								<tr>
-									<td>4</td>
-									<td><a href="#">Psychologists in Denver develop pathway to recovery for failed businesspeople</a></td>
-								</tr>
-
-								<tr>
-									<td>5</td>
-									<td><a href="#">Anti-war campaigners supported by new hormone discovery</a></td>
-								</tr>
-
-								<tr>
-									<td>6</td>
-									<td><a href="#">A petition to release synthetic data for ministers coffee is successful</a></td>
-								</tr>
-						</table>		
-					</div>
-				</div>
-			</div>	
-		
-		
-
-	</body>
-
-</html>
+hello
