--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Ashleigh's Food</title>
+    </head>
+    <body>
+        <h1> I will write about food on this blog</h1>
+        <p> please enjoy</p>
+    </body>
+</html>
