--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1> I will write about food on this blog</h1>
         <p> please enjoy</p>
+        <p> this is my plan </p>
     </body>
 </html>
